--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
-  "name": "HackMIT JSON",
-  "description": "HackMIT Project 2025",
-  "version": "1.0",
   "manifest_version": 3,
+  "name": "Comic Sans Everywhere",
+  "version": "1.1",
+  "description": "Toggle Comic Sans on any website.",
+  "permissions": ["scripting", "activeTab", "storage"],
   "action": {
-    "default_popup": "HackMIT.html",
-    "default_icon": "HackMIT.png"
+    "default_popup": "popup.html"
   }
 }
