--- a/manifest.json
+++ b/manifest.json
@@ -6,5 +6,11 @@
   "action": {
     "default_popup": "HackMIT.html",
     "default_icon": "HackMIT.png"
-  }
+  },
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": ["content.js"]
+    }
+  ]
 }
