--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
-  "name": "Comic Sans Everywhere",
-  "version": "1.1",
-  "description": "Toggle Comic Sans on any website.",
+  "name": "Font Chooser",
+  "version": "1.3",
+  "description": "Switch between Comic Sans, Arial, or Normal fonts.",
   "permissions": ["scripting", "activeTab", "storage"],
   "action": {
     "default_popup": "popup.html"
