--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 3,
-  "name": "HackMIT Dyslexia Curer",
+  "name": "HackMIT Dyslexia Curer v1.2",
   "version": "1.1",
   "description": "Toggle Comic Sans on any website.",
   "permissions": ["scripting", "activeTab", "storage"],
