--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,19 @@
 {
   "manifest_version": 3,
-  "name": "HackMIT Dyslexia Curer v1.2",
-  "version": "1.1",
-  "description": "Toggle Comic Sans on any website.",
-  "permissions": ["scripting", "activeTab", "storage"],
+  "name": "Synonym Reader",
+  "version": "1.0",
+  "description": "Highlight a word to hear its synonyms.",
+  "permissions": ["activeTab", "scripting", "storage", "tts"],
+  "background": {
+    "service_worker": "background.js"
+  },
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": ["content.js"]
+    }
+  ],
   "action": {
-    "default_popup": "popup.html"
+    "default_title": "Synonym Reader"
   }
 }
