--- a/manifest.json
+++ b/manifest.json
@@ -6,5 +6,11 @@
   "permissions": ["scripting", "activeTab", "storage"],
   "action": {
     "default_popup": "popup.html"
-  }
+  },
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": ["content.js"]
+    }
+  ]
 }
