--- a/manifest.json
+++ b/manifest.json
@@ -1,16 +1,21 @@
 {
   "manifest_version": 3,
-  "name": "HackMIT Dyslexia Curer v1.2",
-  "version": "1.1",
-  "description": "Toggle Comic Sans on any website.",
-  "permissions": ["scripting", "activeTab", "storage"],
+  "name": "EasyRead",
+  "version": "1.0",
+  "description": "Switch site fonts to Comic Sans for easier reading",
+  "icons": {
+    "16": "icons/icon16.png"
+
+  },
   "action": {
+    "default_icon": {
+      "16": "icons/icon16.png"
+
+    },
     "default_popup": "popup.html"
   },
-  "content_scripts": [
-    {
-      "matches": ["<all_urls>"],
-      "js": ["content.js"]
-    }
-  ]
+  "background": {
+    "service_worker": "background.js"
+  },
+  "permissions": ["activeTab", "storage", "scripting"]
 }
