--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,16 @@
 {
   "manifest_version": 3,
-  "name": "HackMIT Dyslexia Curer v1.2",
-  "version": "1.1",
-  "description": "Toggle Comic Sans on any website.",
-  "permissions": ["scripting", "activeTab", "storage"],
+  "name": "HackMIT Dyslexia Curer",
+  "version": "1.4",
+  "description": "TS will give you dyslexia",
+  "permissions": ["scripting", "activeTab", "storage"], 
   "action": {
     "default_popup": "popup.html"
-  }
+  },
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": ["content.js"]
+    }
+  ]
 }
